force-app/main/default/objects/Labels__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Labels (Contractor)</relationshipLabel>
    <relationshipName>Labels_Contractor</relationshipName>
    <type>Lookup</type>
</CustomField>