force-app/main/default/objects/Labels__c/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <formula>Label_Owner__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DBA</label>
    <type>Text</type>
</CustomField>