force-app/main/default/objects/Labels__c/fields/DLSE_Garment_License_Number__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Garment_License_Number__c</fullName>
    <formula>Label_Owner__r.Garment_Application__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLSE Garment License Number</label>
    <type>Text</type>
</CustomField>