force-app/main/default/objects/Labels__c/fields/Label_Owner__c.field-meta.xml
<CustomField>
    <fullName>Label_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Label Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Labels (Label Owner)</relationshipLabel>
    <relationshipName>Label_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>