force-app/main/default/objects/Labels__c/fields/Label_Preview__c.field-meta.xml
<CustomField>
    <fullName>Label_Preview__c</fullName>
    <formula>IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39; +  Latest_AttachmentId__c ,  Label_Name__c , 50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label Preview</label>
    <type>Text</type>
</CustomField>