force-app/main/default/objects/Labels__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Labels_Manufacturer</relationshipLabel>
    <relationshipName>Labels</relationshipName>
    <type>Lookup</type>
</CustomField>