force-app/main/default/objects/Labels__c/fields/Mark_as_duplicate__c.field-meta.xml
<CustomField>
    <fullName>Mark_as_duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Label is duplicate, to be merged to a master label</description>
    <label>Mark as duplicate</label>
    <type>Checkbox</type>
</CustomField>