force-app/main/default/objects/Labels__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Labels (Retailer)</relationshipLabel>
    <relationshipName>Labels_Retailer</relationshipName>
    <type>Lookup</type>
</CustomField>