force-app/main/default/objects/Labels__c/fields/RN__c.field-meta.xml
<CustomField>
    <fullName>RN__c</fullName>
    <label>RN #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>