force-app/main/default/objects/Labels__c/fields/Secretary_of_State_Guarantor_URL__c.field-meta.xml
<CustomField>
    <fullName>Secretary_of_State_Guarantor_URL__c</fullName>
    <formula>Label_Owner__r.Secretary_of_State_Guarantor_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secretary of State Guarantor URL</label>
    <type>Text</type>
</CustomField>