force-app/main/default/objects/Labels__c/fields/Updated_Label_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Updated_Label_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Label Attachment</label>
    <type>Checkbox</type>
</CustomField>