force-app/main/default/objects/Labels__c/listViews/AB633_Label_Database.listView-meta.xml
<ListView>
    <fullName>AB633_Label_Database</fullName>
    <columns>NAME</columns>
    <columns>Label_Name__c</columns>
    <columns>Label_Preview__c</columns>
    <columns>Label_Owner__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>RN__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DLSE_Garment_License_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>AB633 Label Database</label>
</ListView>